--- a/rcliberty.Web/Views/Home/Discover.cshtml
+++ b/rcliberty.Web/Views/Home/Discover.cshtml
@@ -81,7 +81,7 @@
                     to help people meet Jesus, and each week he shares God's word and how we can apply it to our daily lives.
                 </p>
                 <p>JP lives in Liberty, MO with his wife and 2 children.</p>
-                <h4 class="link"><a href="https://twitter.com/johnpstafford" target="_blank"><img class="img-tag-sm" src="~/Content/img/tags/twitter-tag.png" /> @Html.Raw("@")JohnPStafford</a></h4>
+                @*<h4 class="link"><a href="https://twitter.com/johnpstafford" target="_blank"><img class="img-tag-sm" src="~/Content/img/tags/twitter-tag.png" /> @Html.Raw("@")JohnPStafford</a></h4>*@
             </div>
         </div>
     </div>
