--- a/rcliberty.Web/Views/Home/Index.cshtml
+++ b/rcliberty.Web/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
     <ol class="carousel-indicators">
         <li data-target="#rc-main-slider" data-slide-to="0" class="active"></li>
         <li data-target="#rc-main-slider" data-slide-to="1"></li>
-        <li data-target="#rc-main-slider" data-slide-to="2"></li>
+        @*<li data-target="#rc-main-slider" data-slide-to="2"></li>*@
     </ol>
 
     <!-- slides -->
@@ -29,9 +29,9 @@
         <div class="item">
             <img src="~/Content/img/weird-stuff-banner.jpg" alt="Current Series" style="width:100%;">
         </div>
-        <div class="item">
+        @*<div class="item">
             <img src="~/Content/img/theCapitol-promo-resize2.png" alt="The Capitol" style="width:100%;" />
-        </div>
+        </div>*@
     </div>
 
     <!-- left & right controls -->
