v1 updates-post deploy
- update current series graphic
- add social media links (side nav)
- update font size/word styling on Discover
- update email settings with email & correct host
- change verbiage on Grow/Become an Owner
- add SEO meta

--- a/rcliberty.Web/Views/Home/Discover.cshtml
+++ b/rcliberty.Web/Views/Home/Discover.cshtml
@@ -17,10 +17,10 @@
     <div id="rc-discover-accordion">
         <h2>Our <span class="emphasis">Culture</span></h2>
         <div>
-            <h4 id="rc-culture-main-text">
+            <p id="rc-culture-main-text">
                 <span class="emphasis">Restoration Church</span> is a church for people that are sick of "playing church". We believe
                 that every number has a name, every name has a story, and every story matters to God.
-            </h4>
+            </p>
             <p>
                 Our Sunday morning service - The Experience, is a time where you are able to connect
                 to God through his Word; communicated in modern and life changing ways. You'll notice
@@ -30,13 +30,13 @@
         </div>
 
         <h2>Our <span class="emphasis">Core Values</span></h2>
-        <div>
+        <div id="rc-core-values">
             <ul>
-                <li>Found people, find people</li>
-                <li>Growing people change</li>
-                <li>Saved People serve people</li>
-                <li>You can't outgive God</li>
-                <li>You can't do life alone</li>
+                <li>Found People, Find People</li>
+                <li>Growing People Change</li>
+                <li>Saved People, Serve People</li>
+                <li>You Can't Outgive God</li>
+                <li>You Can't Do Life Alone</li>
             </ul>
         </div>
 
@@ -62,7 +62,7 @@
                 <li><h5>The New Heavens and the New Earth</h5> </li>
             </ol>
             <a href="https://ag.org/Beliefs/Statement-of-Fundamental-Truths" target="_blank">
-                <img class="img-tag-md pull-right" src="~/Content/img/tags/ag-tag.png">
+                <img class="img-tag-sm pull-right" src="~/Content/img/tags/ag-tag.png">
             </a>
             <div class="clearfix"></div>
         </div>
@@ -81,7 +81,7 @@
                     to help people meet Jesus, and each week he shares God's word and how we can apply it to our daily lives.
                 </p>
                 <p>JP lives in Liberty, MO with his wife and 2 children.</p>
-                @*<h4 class="link"><a href="https://twitter.com/johnpstafford" target="_blank"><img class="img-tag-sm" src="~/Content/img/tags/twitter-tag.png" /> @Html.Raw("@")JohnPStafford</a></h4>*@
+                <h4 class="link"><a href="https://twitter.com/johnpstafford" target="_blank"><img class="img-tag-sm" src="~/Content/img/tags/twitter-tag.png" /> @Html.Raw("@")JohnPStafford</a></h4>
             </div>
         </div>
     </div>
