--- a/rcliberty.Web/Views/Home/Grow.cshtml
+++ b/rcliberty.Web/Views/Home/Grow.cshtml
@@ -252,13 +252,13 @@
                 </div>
                 <div class="modal-body">
                     <h4>
-                        We believe that <span class="emphasis">every Christian</span> should be a co-<i>owner</i>
+                        We believe that <span class="emphasis">every Christian</span> should be an <i>owner</i>
                         of a church!
                     </h4>
                     <p>
                         <span class="emphasis">Members have rights, <i>owners</i> have responsibilities</span>
                         <br />
-                        If you're interested in becoming a <i>co-owner</i> of <span class="emphasis">
+                        If you're interested in becoming a <i>owner</i> of <span class="emphasis">
                             Restoration Church (&amp; at least 12 years old)
                         </span>, we'd love to have you take part in one of our quarterly ownership
                         classes. You'll learn the <strong>vision &amp; values</strong> that we make up our DNA:
