--- a/rcliberty.Web/Content/custom.css
+++ b/rcliberty.Web/Content/custom.css
@@ -159,6 +159,11 @@ body
 }
 
 /* NAVBAR */
+.navbar
+{
+    z-index: 1;
+}
+
 .nav.navbar-nav li a
 {
     color: #fff;
@@ -189,7 +194,8 @@ body
 
     .navbar-nav li
     {
-        width: 20%;
+        /*width: 20%;*/
+        width: 25%; /* w/o podcasts link */
     }
 
 @media screen and (max-width:1890px)
@@ -227,6 +233,78 @@ body
     }
 }
 
+/* SIDE NAV (SOCIAL) */
+#side-nav
+{
+    width: 110px;
+    position: fixed;
+    z-index: 1;
+    top: 40%;
+    left: 0;
+    background-color: rgba(22, 164, 168, 0.8);
+    overflow-x: hidden;
+    padding-top: 1em;
+    transition: 0.2s ease-in-out;
+    border-top: 1px solid #fff;
+    border-right: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+}
+
+    #side-nav > div > ul
+    {
+        list-style-type: none;
+    }
+
+        #side-nav > div > ul > li
+        {
+            padding: 1em 0 1em 0.3em;
+        }
+
+            #side-nav > div > ul > li > a
+            {
+                color: #fff;
+            }
+
+                #side-nav > div > ul > li > a:hover
+                {
+                    color: #141213;
+                }
+
+.social-text
+{
+    -webkit-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
+    color: #fff;
+    font-weight: 500;
+    letter-spacing: 20px;
+    float: left;
+    margin-top: -110px;
+    margin-left: 5px;
+    text-transform: uppercase;
+}
+
+#close
+{
+    font-size: 3em;
+    text-align: center;
+    margin-bottom: -15px;
+}
+
+    #close:hover
+    {
+        -webkit-transform: rotate(-360deg);
+        -webkit-transition: -webkit-transform 0.7s ease-in-out;
+        -moz-transform: rotate(-360deg);
+        -moz-transition: -moz-transform 0.7s ease-in-out;
+        -o-transform: rotate(-360deg);
+        -o-transition: -o-transform 0.7s ease-in-out;
+        -ms-transform: rotate(-360deg);
+        color: #ff0000;
+    }
+
+
 /* FOOTER */
 footer
 {
@@ -261,6 +339,11 @@ footer
         width: 90%;
         margin-left: 5%;
     }
+}
+
+.social-link img
+{
+    max-width: 2em;
 }
 
 /* INDEX */
@@ -340,7 +423,10 @@ footer
         font-size: 14px;
     }
 
-
+#rc-culture-main-text
+{
+    font-weight: 700;
+}
 
 @media screen and (max-width: 730px)
 {
@@ -348,6 +434,17 @@ footer
     {
         line-height: 1.5em;
     }
+}
+
+#rc-core-values ul
+{
+    list-style: none;
+}
+
+#rc-core-values ul li
+{
+    line-height: 2.5em;
+    font-style: normal;
 }
 
 #rc-discover-leaders
@@ -398,6 +495,17 @@ footer
     font-style: italic;
     color: #16a4a8;
     letter-spacing: .05em;
+}
+
+.link a
+{
+    text-decoration: none;
+    color: #141213;
+}
+
+.link:hover a
+{
+    color: #16a4a8;
 }
 
 #rc-discover-accordion > h2
