--- a/rcliberty.Web/Views/Shared/_Layout.cshtml
+++ b/rcliberty.Web/Views/Shared/_Layout.cshtml
@@ -20,6 +20,9 @@
     <!-- custom styles -->
     <link href="~/Content/custom.css" rel="stylesheet" type="text/css" />
 
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
+
 </head>
 <body>
     <div class="spacer"></div>
