update series & nav
- update current series logo
- update nav to include "Podcasts"
- update custom.css for nav li width

--- a/rcliberty.Web/Views/Shared/_Layout.cshtml
+++ b/rcliberty.Web/Views/Shared/_Layout.cshtml
@@ -64,11 +64,11 @@
                             Give
                         </a>
                     </li>
-                    @*<li class="@Html.IsActive("Home", "Podcasts")">
+                    <li class="@Html.IsActive("Home", "Podcasts")">
                             <a href="@Url.Action("Podcasts", "Home")">
                                 Podcasts
                             </a>
-                        </li>*@
+                        </li>
 
                 </ul>
                 @*@Html.Partial("_LoginPartial")*@
