--- a/theCapitol.Web/Views/Home/Index.cshtml
+++ b/theCapitol.Web/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
                 <!-- home content -->
                 <div class="col-md-10 col-md-offset-1">
                     <div class="home-content">
-                        <h1 class="white-text theCapitol-main">welcome to the <span>Capitol</span></h1>
+                        <h1 class="white-text theCapitol-main">welcome to the<span>Capitol</span></h1>
                     </div>
                 </div>
             </div>
@@ -29,27 +29,27 @@
     <div class="container">
         <div class="row">
             <div class="section-header text-center">
-                <h2 class="title">we are the <span>Capitol</span></h2>
+                <h2 class="title">we are the<span>Capitol</span></h2>
             </div>
             <div class="col-md-4">
                 <div class="about">
                     <i class="fa fa-user"></i>
                     <h3>every person has a <span>name</span></h3>
-                    <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero sit amet.</p>
+                    <p>You're an important part of what we do at theCapitol. </p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="about">
                     <i class="fa fa-book"></i>
                     <h3>every name has a <span>story</span></h3>
-                    <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero sit amet.</p>
+                    <p>We've all got stories - and we want to know yours.</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="about">
                     <i class="fa fa-heart"></i>
                     <h3>every story <span>matters</span> to God</h3>
-                    <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero sit amet.</p>
+                    <p>Your story matters to God - and to us.</p>
                 </div>
             </div>
         </div>
@@ -100,8 +100,8 @@
                     <h2 class="title">why <span>we</span> exist</h2>
                 </div>
                 <p>
-                    The <span>Capitol</span> exists to provide a safe place for <span>students</span> 6th - 12th grade to connect
-                    with God, each other, and leaders who desire to see them grow closer to Christ. <br />
+                    the<span>Capitol</span> exists to provide a safe place for <span>students</span> age 12-21 to connect
+                    with God, each other, and leaders who desire to see them grow closer to Jesus. <br />
                     We meet <span>Sundays at 6pm</span> in the Main Auditorium of the RC Liberty campus.
                 </p>
                 <div class="feature">
