--- a/rcliberty.Web/Views/Home/BandRegistration.cshtml
+++ b/rcliberty.Web/Views/Home/BandRegistration.cshtml
@@ -6,6 +6,7 @@
     <h2>1st Annual Battle of the Bands</h2>
     <h3>$1,000.00 CASH PRIZE</h3>
     <button class="btn btn-warning" data-toggle="modal" data-target="#band-registration">How Do We Register?</button>
+    <h4><strong class="emphasis">IMPORTANT: </strong><i>all</i>  band members must be ages 21 &amp; under.</h4>
 </div>
 
 <div id="band-registration" class="modal fade" role="dialog">
@@ -23,7 +24,7 @@
                     we must receive <i>both</i> your online registration &amp; online payment through
                     the payment portal at the bottom of the Band Registration page. Your spot in the event will
                     <span class="emphasis">not</span> be reserved if we do not receive both registration
-                    &amp; payment, no later than <i>Wednesday, July 18th</i>.
+                    &amp; payment, no later than <i>Sunday, July 22nd</i>.
                     <br />
                     Payment is <strong>due</strong> upon <span class="emphasis">registering</span>
                     for the event.
