--- a/rcliberty.Web/Views/Shared/_Layout.cshtml
+++ b/rcliberty.Web/Views/Shared/_Layout.cshtml
@@ -73,11 +73,11 @@
                 </ul>
                 @*@Html.Partial("_LoginPartial")*@
             </div>
-            <div id="event-reg" class="rc-btn">
+            @*<div id="event-reg" class="rc-btn">
                 <a href="@Url.Action("EventRegistration", "Home")">
                     Battle of the Bands Registration
                 </a>
-            </div>
+            </div>*@
         </div>
         <div class="spacer"></div>
     </div>
