--- a/rcliberty.Web/Content/custom.css
+++ b/rcliberty.Web/Content/custom.css
@@ -196,8 +196,9 @@ body
 
     .navbar-nav li
     {
-        width: 20%;
+        /*width: 20%;*/
         /* width: 25%;  w/o podcasts link */
+        width: 16%;
     }
 
 @media screen and (max-width:1890px)
