--- a/rcliberty.Web/Views/Home/Index.cshtml
+++ b/rcliberty.Web/Views/Home/Index.cshtml
@@ -15,34 +15,40 @@
 <div id="rc-main-slider" class="carousel slide" data-ride="carousel">
     <!-- indicator icons -->
     <ol class="carousel-indicators">
-        <li data-target="#rc-main-slider" data-slide-to="0" class="active"></li>
-        <li data-target="#rc-main-slider" data-slide-to="1"></li>
+        @* commented out for Duck Dynasty event *@
+        @*<li data-target="#rc-main-slider" data-slide-to="0" class="active"></li>*@
+        @*<li data-target="#rc-main-slider" data-slide-to="1"></li>*@
+
         @*<li data-target="#rc-main-slider" data-slide-to="2"></li>*@
     </ol>
 
     <!-- slides -->
     <div class="carousel-inner">
         <div class="item active">
-            <img src="~/Content/img/the-experience-banner.jpg" alt="The Experience" style="width:100%;">
+            @*<img src="~/Content/img/the-experience-banner.jpg" alt="The Experience" style="width:100%;">*@
+            <img src="~/Content/img/duck-dynasty-promo-banner.png" alt="Duck Dynasty October 8th" style="width: 100%;" />
         </div>
 
-        <div class="item">
+        @* commented out for Duck Dynasty event *@
+        @*<div class="item">
             <img src="~/Content/img/red-ink-jesus-banner.jpg" alt="Current Series" style="width:100%;">
-        </div>
+        </div>*@
+
         @*<div class="item">
             <img src="~/Content/img/theCapitol-promo-resize2.png" alt="The Capitol" style="width:100%;" />
         </div>*@
     </div>
 
     <!-- left & right controls -->
-    <a class="left carousel-control" href="#rc-main-slider" data-slide="prev">
+    @* commented out for Duck Dynasty event *@
+    @*<a class="left carousel-control" href="#rc-main-slider" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left"></span>
         <span class="sr-only">Previous</span>
     </a>
     <a class="right carousel-control" href="#rc-main-slider" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right"></span>
         <span class="sr-only">Next</span>
-    </a>
+    </a>*@
 </div>
 
 <div class="spacer"></div>
