--- a/rcliberty.Web/Views/Home/Ministries.cshtml
+++ b/rcliberty.Web/Views/Home/Ministries.cshtml
@@ -3,7 +3,121 @@
     ViewBag.Title = "Ministries";
 }
 
+<div>
+    <h1><span class="emphasis">Ministries</span></h1>
+</div>
 
+<div class="spacer"></div>
+
+<div id="rc-ministries">
+
+    <div id="the-experience">
+        <h2>The <span class="emphasis">Experience</span></h2>
+        <div class="rc-ministries-detail">
+            <div id="the-experience-img">
+                <img src="~/Content/img/the-experience-color-wide.jpg" />
+            </div>
+            <br />
+            <div class="spacer"></div>
+            <br />
+            <p>We welcome you to join our main service we have at <span class="emphasis">Restoration Church</span>. Each week you'll experience modern music and a relevant, engaging message from our Lead Pastor JP Stafford or special guest speakers. We hope that you'll grab a cup of coffee from our Hospitality area and enjoy this time with us.</p><br />
+            <p>The Experience happens weekly at <strong>10:30am on Sunday</strong> and usually lasts about an hour.</p>
+        </div>
+    </div>
+
+    <!-- rc kids -->
+    <div class="container-half-screen">
+        <h2>RC <span class="emphasis">Kids</span></h2>
+        <div class="rc-ministries-detail">
+            <div class="ministry-logo">
+                <img id="rc-kids-logo" src="~/Content/img/rc-kids_logo.png" />
+            </div>
+            <p>
+                Looking for a place for your children to belong? <span class="emphasis">RC Kids</span> is a children&rsquo;s ministry uniquely designed with your child in mind! Designed for ages <strong>infant-5th grade</strong>, your kids experience safe, age-appropriate environments where the Bible is taught in a creative and relevant way. We are so passionate about kids learning about Jesus in a way <i>they</i> can understand.
+            </p>
+        </div>
+    </div>
+
+    <!-- the capitol -->
+    <div class="container-half-screen">
+        <h2>the<span class="emphasis">Capitol</span></h2>
+        <div class="rc-ministries-detail">
+            <div class="ministry-logo">
+                <img id="rc-capitol-logo" src="~/Content/img/theCapitol-logo.png" />
+            </div>
+            <p>
+                For our jr. high &amp; high school age students, we welcome them to <span class="emphasis">theCapitol</span>. We are dedicated to providing a place for them to connect with God, other students, and older leaders who serve faithfully to see students grow closer to Christ. theCapitol meets every Sunday night at the RC Liberty campus.
+            </p>
+        </div>
+    </div>
+
+    <div class="clearfix"></div>
+
+    <div id="child-check-in">
+        <h2><span class="emphasis">IMPORTANT INFO</span>: <strong>Child Check-In</strong></h2>
+        <div class="spacer-dark"></div>
+
+        <div id="rc-ministries-accordion">
+            <h2>First Time <span class="emphasis">Joining</span> Us</h2>
+            <div>
+                <p id="">
+                    Look for the area designated to check your child into our database system, and one of our volunteers will lead your child to their age-appropriate room. We will ask for the following:
+                    <ul>
+                        <li>Names of family members</li>
+                        <li>Names of children &amp; their birth dates</li>
+                        <li>Contact Information (current address, phone number)</li>
+                        <li>Any additional special care instructions for your child (allergies, special needs, etc.)</li>
+                    </ul>
+                </p>
+            </div>
+
+            <h2>How It <span class="emphasis">Works</span></h2>
+            <div id="">
+                <h3>How Does 'Child Check-In' Work?</h3>
+                <p>
+                    <ol>
+                        <li>Check in your child at our child check-in station</li>
+                        <li>
+                            After check-in, you and your child will be given matching identification tags that are exclusive to your family and your visit<br />
+                            <strong>NOTE:</strong> <i>Your child will need to wear the name tag portion while you keep the matching tag.</i>
+                        </li>
+                        <li>After the service, you will return to your child's room and show your tag in order for your child to be released back to you.</li>
+                    </ol><br />
+                    <i>In the event that we need to contact you during the service, your child's last name and identification code will appear on the screen in the auditorium. We ask that you exit the auditorium immediately and look for a staff member or volunteer who will direct you to your child's room.</i>
+                </p>
+            </div>
+        </div>
+
+        @*<div class="container-half-screen">
+                <h2><span class="emphasis">First</span> Time Joining Us?</h2>
+                <div class="rc-ministries-detail">
+                    Look for the area designated to check your child into our database system, and one of our volunteers will lead your child to their age-appropriate room. We will ask for the following:
+                    <ul>
+                        <li>Names of family members</li>
+                        <li>Names of children &amp; their birth dates</li>
+                        <li>Contact Information (current address, phone number)</li>
+                        <li>Any additional special care instructions for your child (allergies, special needs, etc.)</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="container-half-screen">
+                <h2><span class="emphasis">Child</span> Check-In</h2>
+                <div class="rc-ministries-detail">
+                    <h3>How Does 'Child Check-In' Work?</h3>
+                    <p>
+                        You may check in your child at our child check-in station. After finding your childs name in the database, you and your child will be given matching identification tags that are exclusive to your family and your visit. Your child will need to wear the name tag portion while you keep the matching tag. After the service, you will return to your childs room and show your tag in order for your child to be released back to you. <br />
+                        <i>In the event that we need to contact you during the service, childs last name and identification code will appear on the screen in the auditorium. We ask that you exit the auditorium immediately and look for a staff member or volunteer who will direct you to your childs room.</i>
+                    </p>
+                </div>
+            </div>
+
+            <div class="clearfix"></div>*@
+    </div>
+</div>
+
+
+<!-- child check-in -->
 @*<tr>
         <td height="619"></td>
         <td></td>
@@ -90,3 +204,32 @@
         </td>
         <td></td>
     </tr>*@
+
+@section scripts {
+    <script>
+        $().ready(function () {
+            //on page load, if the user clicked "Core" img on Index page, display
+            //"Core Values" as active - else, display "Our Culture"
+            if (localStorage.getItem("prevPath") == "/Home/Index"
+                || localStorage.getItem("prevPath") == "/"
+                || localStorage.getItem("prevPath") == "/Home"
+                || localStorage.getItem("prevPath") == "/Home/") {
+                $('#rc-ministries-accordion').accordion({
+                    active: 1,
+                    collapsible: true,
+                    header: "h2",
+                    heightStyle: "content"
+                });
+            } else {
+                $('#rc-ministries-accordion').accordion({
+                    active: 0,
+                    collapsible: true,
+                    header: "h2",
+                    heightStyle: "content"
+                });
+            };
+            //remove the local variable after use
+            localStorage.removeItem("prevPath");
+        });
+    </script>
+}
