--- a/rcliberty.Web/Views/Shared/_Layout.cshtml
+++ b/rcliberty.Web/Views/Shared/_Layout.cshtml
@@ -70,19 +70,19 @@
                         </a>
                     </li>
                     <li class="@Html.IsActive("Home", "Podcasts")">
-                            <a href="@Url.Action("Podcasts", "Home")">
-                                Podcasts
-                            </a>
-                        </li>
+                        <a href="@Url.Action("Podcasts", "Home")">
+                            Podcasts
+                        </a>
+                    </li>
 
                 </ul>
                 @*@Html.Partial("_LoginPartial")*@
             </div>
             @*<div id="event-reg" class="rc-btn">
-                <a href="@Url.Action("EventRegistration", "Home")">
-                    Battle of the Bands Registration
-                </a>
-            </div>*@
+                    <a href="@Url.Action("EventRegistration", "Home")">
+                        Battle of the Bands Registration
+                    </a>
+                </div>*@
         </div>
         <div class="spacer"></div>
     </div>
@@ -120,6 +120,38 @@
 
 
     <div class="overlay"></div>
+
+
+    @******************************************************@
+    <!-- TODO dynamically display modal button on Sunday AM 30 min prior to service (DateTime.Now)-->
+    
+    <!-- Trigger the modal with a button -->
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#live-video">LIVE STREAM</button>
+
+    <!-- Modal -->
+    <div id="live-video" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">LIVE STREAM | @DateTime.Now.Date.DayOfWeek</h4>
+                </div>
+                <div class="modal-body">
+                    <!-- TEST: LIVESTREAM -->
+                    <iframe id="ls_embed_1539200673" src="https://livestream.com/accounts/27837009/events/8408291/player?width=960&height=540&enableInfoAndActivity=true&defaultDrawer=feed&autoPlay=true&mute=false" width="960" height="540" frameborder="0" scrolling="no" allowfullscreen> </iframe>
+                    <script type="text/javascript" data-embed_id="ls_embed_1539200673" src="https://livestream.com/assets/plugins/referrer_tracking.js"></script>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    @******************************************************@
+
 
     <div class="container body-content">
         @RenderBody()
