--- a/rcliberty.Web/Views/Shared/_Layout.cshtml
+++ b/rcliberty.Web/Views/Shared/_Layout.cshtml
@@ -23,6 +23,16 @@
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
 
+    <!-- Google analytics (Global site tag -- gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127337513-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-127337513-1');
+    </script>
+
 </head>
 <body>
 
