--- a/rcliberty.Web/Views/Home/Ministries.cshtml
+++ b/rcliberty.Web/Views/Home/Ministries.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div>
-    <h1><span class="emphasis">Ministries</span></h1>
+    <h1 id="rc-ministries-header">Ministries</h1>
 </div>
 
 <div class="spacer"></div>
