--- a/rcliberty.Web/Views/Shared/_Layout.cshtml
+++ b/rcliberty.Web/Views/Shared/_Layout.cshtml
@@ -132,7 +132,7 @@
     <div class="bg-overlay"></div>
 
     <!-- display live-notification Sundays between 10am & 12pm (use CST or UCT?) //! commented out until release -->
-    @*@if (DateTime.Now.DayOfWeek == DayOfWeek.Sunday
+    @if (DateTime.Now.DayOfWeek == DayOfWeek.Sunday
                          && DateTime.Now.Hour >= 10
                          && DateTime.Now.Hour <= 12)
         {
@@ -141,7 +141,7 @@
         <button type="button" class="btn rc-live-btn" data-toggle="modal" data-target="#live-video"><span class="dot"></span> LIVE</button>
         <p>Now streaming <span class="emphasis">The Experience</span></p>
     </div>
-    }*@
+    }
 
     <!-- live-video-modal -->
     <div id="live-video" class="modal fade" role="dialog">
