add records to DB
- method for add series to DB
- method for add episodes to DB & associate to series

--- a/rcliberty.Web/Views/Home/Podcasts.cshtml
+++ b/rcliberty.Web/Views/Home/Podcasts.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<rcliberty.Web.Models.PodcastModels.PodcastDisplayModel>
+﻿@model IEnumerable<rcliberty.Web.Models.PodcastModels.Episode>
 
 @{
     ViewBag.Title = "Podcasts";
