--- a/rcliberty.Web/Views/Home/Media.cshtml
+++ b/rcliberty.Web/Views/Home/Media.cshtml
@@ -1,7 +1,27 @@
-﻿
+﻿@model IEnumerable<rcliberty.Web.Models.PodcastModels.Series>
+
 @{
     ViewBag.Title = "Media";
 }
 
 <h2>@ViewBag.Title</h2>
 
+<table id="rc-sermons-table">
+    <thead>
+        <tr>
+            <th>@Html.DisplayNameFor(model => model.Id)</th>
+            <th>@Html.DisplayNameFor(model => model.Name)</th>
+            <th>@Html.DisplayNameFor(model => model.Image)</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var series in Model)
+            {
+            <tr>
+                <td>@series.Id</td>
+                <td>@series.Name</td>
+                <td>@series.Image</td>
+            </tr>
+        }
+    </tbody>
+</table>
