--- a/rcliberty.Web/Views/Home/Media.cshtml
+++ b/rcliberty.Web/Views/Home/Media.cshtml
@@ -4,24 +4,35 @@
     ViewBag.Title = "Media";
 }
 
-<h2>@ViewBag.Title</h2>
+<h2>Media</h2>
 
-<table id="rc-sermons-table">
-    <thead>
+@foreach (var item in Model)
+{
+    <div class="col-md-4">
+        <h2>@item.Name</h2>
+        <p>@item.Id</p>
+        <img class="series-img" src="~/Content/img/series/@item.Image" />
+    </div>
+}
+
+
+@*<p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+    <table class="table">
         <tr>
-            <th>@Html.DisplayNameFor(model => model.Id)</th>
-            <th>@Html.DisplayNameFor(model => model.Name)</th>
-            <th>@Html.DisplayNameFor(model => model.Image)</th>
+            <th></th>
         </tr>
-    </thead>
-    <tbody>
-        @foreach (var series in Model)
-            {
-            <tr>
-                <td>@series.Id</td>
-                <td>@series.Name</td>
-                <td>@series.Image</td>
-            </tr>
-        }
-    </tbody>
+
+    @foreach (var item in Model) {
+        <tr>
+            <td>
+                <h2>@item.Name</h2>
+                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            </td>
+        </tr>
+    }*@
+
 </table>
