--- a/rcliberty.Web/Views/Shared/_Layout.cshtml
+++ b/rcliberty.Web/Views/Shared/_Layout.cshtml
@@ -132,13 +132,13 @@
     <div class="bg-overlay"></div>
 
     @if (DateTime.Now.DayOfWeek == DayOfWeek.Sunday
-                                 && DateTime.UtcNow.Hour >= 15
-                                 && DateTime.UtcNow.Hour <= 17)
+                                                 && DateTime.UtcNow.Hour >= 15
+                                                 && DateTime.UtcNow.Hour <= 17)
     {
     <!-- live notification (live stream modal) -->
         <div id="live-notification" class="blink">
             <button type="button" class="btn rc-live-btn" data-toggle="modal" data-target="#live-video"><span class="dot"></span> LIVE</button>
-            <p>Now streaming <span class="emphasis">The Experience</span></p>
+            <p>Now streaming <span class="emphasis"><br />The Experience</span></p>
         </div>
     }
 
